--- a/contacts.html
+++ b/contacts.html
@@ -401,10 +401,20 @@
                   </a>
                 </li>
               </ul>
-              <button class="btn button__project_two">
-                <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
-                <span class="button__hover"></span>
-              </button>
+              <div class="header__nav_buttons">
+                <button class="btn button__project_two">
+                  <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
+                  <span class="button__hover"></span>
+                </button>
+                <a href="briefing.html" class="btn button__briefing_two">
+                  <span class="button__text">БРИФИНГ</span>
+                  <span class="button__hover"></span>
+                </a>
+                <a href="" class="btn button__feedback_two">
+                  <span class="button__text">КАЛЬКУЛЯТОР</span>
+                  <span class="button__hover"></span>
+                </a>
+              </div>
               <ul class="header__nav_bottom_social" data-scroll data-scroll-speed="0">
                 <li>
                   <a href="https://t.me/anyera" target="_blank" class="header__nav_bottom_link">
@@ -482,69 +492,98 @@
                 <h2 class="header__consultation_head">РАССКАЖИТЕ О ВАШЕМ ПРОЕКТЕ</h2>
                 <p class="header__consultation_desc">Опишите свою задачу и мы свяжемся с вами в ближайшее рабочее время.</p>
               </div>
-              <div class="header__consultation_contacts"></div>
+              <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a href="mailto://career@anyera.ru">career@anyera.ru</a> и задать любые интересующие вопросы</p></div>
             </div>
             <form id="form" class="header__forms_form">
               <div class="header__forms_form_controls">
-                <div class="header__forms_form_control">
-                  <input class="header__forms_form_input" type="text" minlength="4" maxlength="40" placeholder="Как к вам обращаться?" id="username" />
-                  <span class="header__forms_form_bar"></span>
-                  <span class="header__forms_form_border"></span>
-                  <small>Error message</small>
+                <div class="form__control">
+                  <input class="form__input" type="text" minl="4" maxl="40" id="username" />
+                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">0</span></small>
+                  <label class="form__label" for="username">Как к вам обращаться? <span>*</span></label>
+                  <span class="form__bar"></span>
+                  <span class="form__border"></span>
+                  <small class="form__error">Введите имя</small>
                 </div>
-                <div class="header__forms_form_control">
-                  <input class="header__forms_form_input" type="tel" minlength="5" maxlength="20" placeholder="Номер для связи" id="phone" />
-                  <span class="header__forms_form_bar"></span>
-                  <span class="header__forms_form_border"></span>
-                  <small>Error message</small>
+                <div class="form__control">
+                  <input class="form__input" data-phone-pattern type="text" minl="17" maxl="17" id="phone" />
+                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">0</span></small>
+                  <label class="form__label" for="phone">Номер для связи <span>*</span></label>
+                  <span class="form__bar"></span>
+                  <span class="form__border"></span>
+                  <small class="form__error">Введите корректный телефон</small>
                 </div>
-                <div class="header__select_box">
-                  <div class="header__select" data-select>
-                    <div class="header__select_selected_item" data-select-action data-select-open>
-                      <div class="header__select_selected-title" data-select-title>Способ связи</div>
-                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <p class="form__select_label">Способ связи</p>
+                <div class="form__select_box">
+                  <div class="form__select" data-select>
+                    <div class="form__select_selected_item" data-select-action data-select-open>
+                      <div class="form__select_selected-title" data-select-title>Выбрать</div>
+                      <svg class="form__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
                       </svg>
                     </div>
-                    <div class="header__select_list" data-select-list>
-                      <div class="header__select_list_item" data-select-action data-select-item>Позвонить</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>Написать на почту</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>Написать в телеграм</div>
+                    <div class="form__select_list" data-select-list>
+                      <div class="form__select_list_item" data-select-action data-select-item>Позвонить</div>
+                      <div class="form__select_list_item" data-select-action data-select-item>Написать на почту</div>
+                      <div class="form__select_list_item" data-select-action data-select-item>Написать в телеграм</div>
                     </div>
-                    <input class="header__select_input" type="text" data-select-input>
+                    <input class="form__select_input" type="text" id="сommunication" data-select-input>
+                    <span class="form__select_bar"></span>
+                    <span class="form__select_border"></span>
                   </div>
                 </div>
-                <div class="header__select_box">
-                  <div class="header__select" data-select>
-                    <div class="header__select_selected_item" data-select-action data-select-open>
-                      <div class="header__select_selected-title" data-select-title>Бюджет проекта</div>
-                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <p class="form__select_label">Бюджет проекта</p>
+                <div class="form__select_box">
+                  <div class="form__select" data-select>
+                    <div class="form__select_selected_item" data-select-action data-select-open>
+                      <div class="form__select_selected-title" data-select-title>Выбрать</div>
+                      <svg class="form__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
                       </svg>
                     </div>
-                    <div class="header__select_list" data-select-list>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 50 до 150</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 150 до 500</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 500 до 1 млн</div>
-                      <div class="header__select_list_item" data-select-action data-select-item>от 1 млн</div>
+                    <div class="form__select_list" data-select-list>
+                      <div class="form__select_list_item" data-select-action data-select-item>от 50 до 150</div>
+                      <div class="form__select_list_item" data-select-action data-select-item>от 150 до 500</div>
+                      <div class="form__select_list_item" data-select-action data-select-item>от 500 до 1 млн</div>
+                      <div class="form__select_list_item" data-select-action data-select-item>от 1 млн</div>
                     </div>
-                    <input class="header__select_input" type="text" data-select-input>
+                    <input class="form__select_input" type="text" id="price" data-select-input>
+                    <span class="form__select_bar"></span>
+                    <span class="form__select_border"></span>
                   </div>
                 </div>
-                <div class="header__forms_form_control">
-                  <label for="text" class="header__form_name">Опишите проект</label>
-                  <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="text" placeholder=""></textarea>
-                  <span class="header__forms_form_bar"></span>
-                  <span class="header__forms_form_border"></span>
-                  <small>Error message</small>
+                <div class="form__control">
+                  <textarea class="form__input" type="text" minl="4" maxl="300" id="text"></textarea>
+                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">0</span></small>
+                  <span class="form__pencil">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.99376 2.1613L10.8391 5.00662M7.99376 2.1613L1.98697 8.16808C1.57655 8.57851 1.31031 9.11098 1.22822 9.68558L1.00692 11.2347C0.94369 11.6773 1.32307 12.0567 1.76567 11.9935L3.31479 11.7722C3.88939 11.6901 4.42186 11.4238 4.83229 11.0134L10.8391 5.00662M7.99376 2.1613L8.74047 1.41459C9.52152 0.63354 10.7963 0.641985 11.5773 1.42303C12.3584 2.20408 12.3668 3.47886 11.5858 4.25991L10.8391 5.00662" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </span>
+                  <span class="form__close">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 11L6.00001 6M6.00001 6L11 1.00001M6.00001 6L1 1M6.00001 6L11 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </span>
+                  <label class="form__label" for="text">Опишите проект <span>*</span></label>
+                  <span class="form__bar"></span>
+                  <span class="form__border"></span>
+                  <small class="form__error">Введите описание проекта</small>
                 </div>
               </div>
               <div class="header__form_bottom">
+                <label class="form__policy">
+                  <input class="form__policy_input" type="checkbox" checked>
+                  <span class="form__policy_check">
+                    <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1.3335 3.73301L4.8335 7.33301L10.6668 1.33301" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </span>
+                  <span>Я даю свое согласие на <a href="policy.html" class="text text__middle"><span>обработку персональных данных</span></a>.</span>
+                </label>
                 <div class="btn btn__input header__form_button">
                   <input type="submit" name="submit" value="Отправить" class="button__text">
                   <span class="button__hover"></span>
                 </div>
-                <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="policy.html" class="text text__middle"><span>политики конфиденциальности</span></a>.</p>
               </div>
             </form>
           </div>
