--- a/404.html
+++ b/404.html
@@ -103,11 +103,11 @@
               <span class="button__hover"></span>
             </button>
             <button class="btn button__briefing">
-              <span class="button__text">ОБРАТНАЯ СВЯЗЬ</span>
+              <span class="button__text">БРИФИНГ</span>
               <span class="button__hover"></span>
             </button>
             <a href="briefing.html" class="btn button__feedback">
-              <span class="button__text">БРИФИНГ</span>
+              <span class="button__text">КАЛЬКУЛЯТОР</span>
               <span class="button__hover"></span>
             </a>
             <div class="header__consultation_burger_flex">
