--- a/contacts.html
+++ b/contacts.html
@@ -102,12 +102,12 @@
               <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
               <span class="button__hover"></span>
             </button>
-            <button class="btn footer__button footer_popup__button">
-              <span class="button__text">ОБРАТНАЯ СВЯЗЬ</span>
+            <button class="btn button__briefing">
+              <span class="button__text">БРИФИНГ</span>
               <span class="button__hover"></span>
             </button>
             <a href="briefing.html" class="btn button__feedback">
-              <span class="button__text">БРИФИНГ</span>
+              <span class="button__text">КАЛЬКУЛЯТОР</span>
               <span class="button__hover"></span>
             </a>
             <div class="header__consultation_burger_flex">
