--- a/project.html
+++ b/project.html
@@ -106,10 +106,10 @@
               <span class="button__text">БРИФИНГ</span>
               <span class="button__hover"></span>
             </button>
-            <a href="briefing.html" class="btn button__feedback">
+            <!-- <a href="briefing.html" class="btn button__feedback">
               <span class="button__text">КАЛЬКУЛЯТОР</span>
               <span class="button__hover"></span>
-            </a>
+            </a> -->
             <div class="header__consultation_burger_flex">
               <button class="header__consultation_burger" aria-label="Закрыть меню">
                 <svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -642,10 +642,10 @@
                   <span class="button__text">БРИФИНГ</span>
                   <span class="button__hover"></span>
                 </a>
-                <a href="" class="btn button__feedback_two">
+                <!-- <a href="" class="btn button__feedback_two">
                   <span class="button__text">КАЛЬКУЛЯТОР</span>
                   <span class="button__hover"></span>
-                </a>
+                </a> -->
               </div>
               <ul class="header__nav_bottom_social" data-scroll data-scroll-speed="0">
                 <li>
