--- a/price.html
+++ b/price.html
@@ -291,7 +291,7 @@
                       <span class="button__text">Скачать презентацию</span>
                       <span class="button__hover"></span>
                     </button>
-                    <button class="btn footer__button">
+                    <button class="btn footer__button footer_popup__button">
                       <span class="button__text">Обратная связь</span>
                       <span class="button__hover"></span>
                     </button>
