--- a/project.html
+++ b/project.html
@@ -124,7 +124,7 @@
   </header>
   <main class="main" data-scroll-container>
     <div class="main__border"></div>
-    <section class="project_top" data-scroll-section id="top" style="background-color: #001254;">
+    <section class="project_top" data-scroll-section id="top" style="background: #001254;">
       <div class="container project_top__container">
         <div class="project_top__block">
           <div class="project_top__info">
