--- a/services.html
+++ b/services.html
@@ -102,10 +102,10 @@
               <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
               <span class="button__hover"></span>
             </button>
-            <button class="btn button__briefing">
+            <a href="briefing.html" class="btn button__briefing">
               <span class="button__text">БРИФИНГ</span>
               <span class="button__hover"></span>
-            </button>
+            </a>
             <!-- <a href="briefing.html" class="btn button__feedback">
               <span class="button__text">КАЛЬКУЛЯТОР</span>
               <span class="button__hover"></span>
