--- a/project.html
+++ b/project.html
@@ -531,12 +531,12 @@
                 </div>
                 <ul class="footer__list">
                   <li class="footer__item">
-                    <a href="#" class="footer__link text">
+                    <a href="services.html" class="footer__link text">
                       <span class="text__rotate text__big">Услуги</span>
                     </a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="footer__link text">
+                    <a href="career.html" class="footer__link text">
                       <span class="text__rotate text__big">Карьера</span>
                     </a>
                   </li>
@@ -546,7 +546,7 @@
                     </a>
                   </li>
                   <li class="footer__item">
-                    <a href="#" class="footer__link text">
+                    <a href="services.html" class="footer__link text">
                       <span class="text__rotate text__big">Документы</span>
                     </a>
                   </li>
