add tab slider in project

--- a/project.html
+++ b/project.html
@@ -209,6 +209,45 @@
         </div>
       </div>
     </section>
+    <section class="project_tab" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container project_banner__container">
+        <div class="project_tab__block">
+          <div class="project__info">
+            <div class="project__info_left">
+              <h4 class="project__head">Tablet версия</h4>
+            </div>
+            <div class="project__info_right">
+              <p class="project__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo ullamcorper a lacus vestibulum sed arcu. Suspendisse in est ante in nibh mauris cursus mattis molestie. Risus sed vulputate odio ut. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Hac habitasse platea dictumst vestibulum rhoncus. Ac turpis egestas integer eget. Auctor eu augue ut lectus arcu. Id consectetur purus ut faucibus. Justo laoreet sit amet cursus sit amet dictum sit. Ac odio tempor orci dapibus ultrices. Tempor orci eu lobortis elementum nibh tellus. Urna duis convallis convallis tellus id interdum velit laoreet</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container project_tab__container">
+        <div class="project_tab__slider">
+          <div class="project_tab__img">
+            <img src="img/project/tab.svg" alt="">
+          </div>
+          <div class="project_tab__swiper swiper">
+            <ul class="project_tab__list swiper-wrapper">
+              <li class="project_tab__item swiper-slide">
+                <div class="project_tab__image">
+                  <img src="img/project/project_1/project_tab_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_tab__item swiper-slide">
+                <div class="project_tab__image">
+                  <img src="img/project/project_1/project_tab_2.webp" alt="">
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="project_tab__navigation">
+            <div class="swiper-pagination project_tab__pagination"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="project_phone" data-scroll-section>
       <div class="main__border"></div>
       <div class="container project_banner__container">
