--- a/article.html
+++ b/article.html
@@ -147,10 +147,10 @@
           <div class="article__info_left">
             <div class="article__info_sticky" data-scroll data-scroll-sticky data-scroll-target="#article__fixed">
               <div class="article__info_block" data-scroll>
-                <a data-scroll-to href="#article_1" class="article__heading"><h4>Введение</h4></a>
-                <a data-scroll-to href="#article_2" class="article__heading"><h4>Основной вопрос 1</h4></a>
-                <a data-scroll-to href="#article_3" class="article__heading"><h4>Основной вопрос 2</h4></a>
-                <a data-scroll-to href="#article_4" class="article__heading"><h4>Вывод</h4></a>
+                <a data-scroll-to href="#article_1" class="article__heading text text__big"><h4>Введение</h4></a>
+                <a data-scroll-to href="#article_2" class="article__heading text text__big"><h4>Основной вопрос 1</h4></a>
+                <a data-scroll-to href="#article_3" class="article__heading text text__big"><h4>Основной вопрос 2</h4></a>
+                <a data-scroll-to href="#article_4" class="article__heading text text__big"><h4>Вывод</h4></a>
               </div>
             </div>
           </div>
