--- a/certificates.html
+++ b/certificates.html
@@ -339,7 +339,7 @@
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="public.html" class="header__nav_link">
+                <a href="articles.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Статьи</span></h3>
                 </a>
               </li>
