--- a/articles.html
+++ b/articles.html
@@ -573,38 +573,78 @@
               </div>
             </a>
           </li>
-          <li class="articles_page__item">
-            <!-- <form class="articles_page__form">
-              <h2>Подпишитесь на нашу рассылку</h2>
-              <p>Обещаем, что мы не будем спамить, а будем отправлять только полезные материалы</p>
-              <div class="header__forms_form_controls">
-                <div class="form__control">
-                  <input class="form__input" data-phone-pattern="" type="text" minl="17" maxl="17" id="phone">
-                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">17</span></small>
-                  <label class="form__label" for="phone">Номер для связи <span>*</span></label>
-                  <span class="form__bar"></span>
-                  <span class="form__border"></span>
-                  <small class="form__error">Введите корректный телефон</small>
-                </div>
-              </div>
-              <div class="header__form_bottom">
-                <label class="form__policy">
-                  <input class="form__policy_input" type="checkbox" checked="">
-                  <span class="form__policy_check">
-                    <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M1.3335 3.73301L4.8335 7.33301L10.6668 1.33301" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg>
-                  </span>
-                  <span>Я даю свое согласие на <a href="policy.html" class="text text__middle">обработку персональных</a>.</span>
-                </label>
-                <div class="btn btn__input header__form_button">
-                  <input type="submit" name="submit" value="Отправить" class="button__text">
-                  <span class="button__hover"></span>
-                </div>
-              </div>
-            </form> -->
-          </li>
         </ul>
+        <div class="articles_page__bottom">
+          <button class="btn articles_page__button">
+            <span class="button__text">Показать еще статьи</span>
+            <span class="button__hover"></span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="subscription" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container subscription__container">
+        <div class="subscription__block">
+          <form id="form__subscription" class="subscription__form">
+            <h2 class="subscription__head">Подпишитесь на нашу рассылку</h2>
+            <p class="subscription__desc">Обещаем, что мы не будем спамить, а будем отправлять только полезные материалы</p>
+            <div class="subscription__form_controls">
+              <div class="form__control">
+                <input class="form__input" type="text" minl="4" maxl="40" id="subscription__email">
+                <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">40</span></small>
+                <label class="form__label" for="subscription__email">E-mail</label>
+                <span class="form__bar"></span>
+                <span class="form__border"></span>
+                <small class="form__error">Введите e-mail</small>
+              </div>
+            </div>
+            <div class="header__form_bottom">
+              <label class="form__policy">
+                <input class="form__policy_input" type="checkbox" checked="">
+                <span class="form__policy_check">
+                  <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.3335 3.73301L4.8335 7.33301L10.6668 1.33301" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>
+                </span>
+                <span>Я даю свое согласие на <a href="policy.html" class="text text__middle">обработку персональных</a>.</span>
+              </label>
+              <div class="btn btn__input header__form_button">
+                <input type="submit" name="submit" value="Отправить" class="button__text">
+                <span class="button__hover"></span>
+              </div>
+            </div>
+          </form>
+          <div class="subscription__image">
+            <svg width="936" height="611" viewBox="0 0 936 611" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M441.944 140.471C241.02 153.618 255.497 370.715 287.851 477.62C408.69 747.342 569.315 557.455 547.073 375.128C524.831 192.801 796.898 393.709 877.493 176.079C970.945 -76.2727 693.099 124.036 441.944 140.471Z" stroke="currentColor"/>
+              <path opacity="0.95875" d="M445.156 149.633C244.186 155.527 251.31 373.313 279.993 481.469C391.491 755.765 558.205 571.541 542.159 388.271C526.113 205.001 790.862 415.898 878.64 201.015C980.422 -48.1502 696.367 142.266 445.156 149.633Z" stroke="currentColor"/>
+              <path opacity="0.9175" d="M448.052 158.919C247.282 157.552 247.043 375.761 272.02 485.037C374.042 763.573 546.642 585.236 536.811 401.246C526.981 217.256 784.09 437.886 878.944 226.012C988.931 -19.6634 699.014 160.629 448.052 158.919Z" stroke="currentColor"/>
+              <path opacity="0.87625" d="M450.629 168.317C250.303 159.69 242.702 378.057 263.942 488.32C356.364 770.757 534.639 598.523 531.036 414.037C527.434 229.551 776.589 459.645 878.403 251.039C996.462 9.15264 701.037 179.101 450.629 168.317Z" stroke="currentColor"/>
+              <path opacity="0.835" d="M452.884 177.815C253.246 161.939 238.292 380.198 255.77 491.312C338.479 777.306 522.212 611.386 524.841 426.63C527.47 241.873 768.368 481.15 877.02 276.066C1003.01 38.263 702.432 197.66 452.884 177.815Z" stroke="currentColor"/>
+              <path opacity="0.79375" d="M454.814 187.402C256.108 164.295 233.819 382.181 247.513 494.012C320.409 783.214 509.376 623.81 518.234 439.008C527.091 254.205 759.438 502.374 874.794 301.062C1008.55 67.6321 703.198 216.284 454.814 187.402Z" stroke="currentColor"/>
+              <path opacity="0.7525" d="M456.417 197.065C258.884 166.758 229.288 384.004 239.181 496.415C302.175 788.473 496.146 635.78 511.221 451.156C526.297 266.533 749.81 523.291 871.73 325.996C1013.1 97.2242 703.334 234.95 456.417 197.065Z" stroke="currentColor"/>
+              <path opacity="0.71125" d="M457.691 206.795C261.571 169.322 224.704 385.664 230.785 498.519C283.799 793.078 482.538 647.28 503.813 463.061C525.088 278.842 739.495 543.877 867.83 350.839C1016.64 127.003 702.84 253.635 457.691 206.795Z" stroke="currentColor"/>
+              <path opacity="0.67" d="M458.634 216.577C264.167 171.986 220.073 387.16 222.334 500.32C265.305 797.021 468.569 658.297 496.018 474.706C523.466 291.116 728.506 564.105 863.1 375.559C1019.17 156.933 701.717 272.316 458.634 216.577Z" stroke="currentColor"/>
+              <path opacity="0.62875" d="M459.244 226.401C266.668 174.745 215.401 388.489 213.84 501.818C246.714 800.298 454.256 668.818 487.845 486.079C521.434 303.341 716.856 583.951 857.546 400.128C1020.68 186.977 699.965 290.971 459.244 226.401Z" stroke="currentColor"/>
+              <path opacity="0.5875" d="M459.523 236.255C269.07 177.597 210.693 389.651 205.311 503.01C228.049 802.906 439.617 678.829 479.305 497.165C518.993 315.502 704.56 603.391 851.173 424.514C1021.18 217.099 697.588 309.577 459.523 236.255Z" stroke="currentColor"/>
+              <path opacity="0.54625" d="M459.467 246.125C271.371 180.537 205.955 390.642 196.758 503.893C209.333 804.84 424.667 688.317 470.406 507.95C516.145 327.582 691.631 622.401 843.989 448.688C1020.65 247.26 694.586 328.111 459.467 246.125Z" stroke="currentColor"/>
+              <path opacity="0.505" d="M459.079 256.002C273.569 183.564 201.193 391.464 188.194 504.469C190.589 806.1 409.429 697.273 461.163 518.422C512.897 339.571 678.087 640.958 836.005 472.621C1019.12 277.427 690.966 346.55 459.079 256.002Z" stroke="currentColor"/>
+              <path opacity="0.46375" d="M458.36 265.874C275.661 186.673 196.414 392.115 179.628 504.736C171.841 806.684 393.919 705.686 451.585 528.569C509.251 351.451 663.945 659.041 827.23 496.285C1016.56 307.562 686.732 364.874 458.36 265.874Z" stroke="currentColor"/>
+              <path opacity="0.4225" d="M457.307 275.725C277.643 189.858 191.621 392.592 171.068 504.692C153.108 806.589 378.154 713.543 441.682 538.375C505.21 363.208 649.219 676.625 817.671 519.647C1013 337.626 681.886 383.057 457.307 275.725Z" stroke="currentColor"/>
+              <path opacity="0.38125" d="M455.925 285.547C279.515 193.12 186.823 392.898 162.528 504.341C134.418 805.819 362.157 720.838 431.469 547.833C500.782 374.829 633.931 693.691 807.346 542.684C1008.43 367.586 676.439 401.081 455.925 285.547Z" stroke="currentColor"/>
+              <path opacity="0.34" d="M454.214 295.325C281.271 196.449 182.022 393.029 154.015 503.678C115.788 804.37 345.944 727.558 420.956 556.927C495.969 386.296 618.095 710.216 796.262 565.364C1002.85 397.401 670.392 418.919 454.214 295.325Z" stroke="currentColor"/>
+              <path opacity="0.29875" d="M452.176 305.049C282.912 199.846 177.227 392.987 145.542 502.708C97.2457 802.248 329.537 733.698 410.158 565.649C490.779 397.6 601.734 726.182 784.435 587.661C996.284 427.039 663.756 436.554 452.176 305.049Z" stroke="currentColor"/>
+              <path opacity="0.2575" d="M449.814 314.708C284.436 203.304 172.443 392.772 137.119 501.431C78.8115 799.453 312.955 739.249 399.087 573.987C485.218 408.724 584.867 741.569 771.88 609.547C988.729 456.462 656.538 453.962 449.814 314.708Z" stroke="currentColor"/>
+              <path opacity="0.21625" d="M447.133 324.289C285.841 206.821 167.677 392.385 128.757 499.85C60.5091 795.991 296.22 744.206 387.757 581.932C479.294 419.657 567.515 756.359 758.612 630.997C980.196 485.635 648.748 471.123 447.133 324.289Z" stroke="currentColor"/>
+              <path opacity="0.175" d="M444.131 333.778C287.122 210.39 162.932 391.823 120.462 497.963C42.3578 791.863 279.349 748.56 376.18 589.471C473.011 430.382 549.696 770.53 744.644 651.982C970.694 514.52 640.392 488.014 444.131 333.778Z" stroke="currentColor"/>
+              <path opacity="0.13375" d="M440.816 343.168C288.281 214.009 158.215 391.09 112.249 495.776C24.3827 787.076 262.366 752.309 364.372 596.599C466.379 440.89 531.435 784.069 729.997 672.478C960.238 543.084 631.485 504.616 440.816 343.168Z" stroke="currentColor"/>
+              <path opacity="0.0925" d="M437.191 352.444C289.316 217.672 153.533 390.187 104.126 493.29C6.60474 781.636 245.289 755.446 352.348 603.305C459.406 451.165 512.754 796.959 714.688 692.461C948.838 571.292 622.034 520.91 437.191 352.444Z" stroke="currentColor"/>
+              <path opacity="0.05125" d="M433.26 361.597C290.226 221.376 148.891 389.113 96.1025 490.509C-10.9544 775.549 228.141 757.968 340.12 609.582C452.1 461.196 493.675 809.182 698.734 711.906C936.509 599.11 612.053 536.874 433.26 361.597Z" stroke="currentColor"/>
+              <path opacity="0.01" d="M429.028 370.615C291.008 225.115 144.294 387.87 88.1889 487.435C-28.2734 768.823 210.941 759.872 327.706 615.422C444.47 470.971 474.222 820.726 682.157 730.789C923.266 626.503 601.552 552.489 429.028 370.615Z" stroke="currentColor"/>
+            </svg>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer" data-scroll-section>
