add slider in project

--- a/project.html
+++ b/project.html
@@ -313,6 +313,134 @@
         </div>
       </div>
     </section>
+    <section class="project_present" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container project_banner__container">
+        <div class="project_present__block">
+          <div class="project__info">
+            <div class="project__info_left">
+              <h4 class="project__head">Tablet версия</h4>
+            </div>
+            <div class="project__info_right">
+              <p class="project__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo ullamcorper a lacus vestibulum sed arcu. Suspendisse in est ante in nibh mauris cursus mattis molestie. Risus sed vulputate odio ut. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Hac habitasse platea dictumst vestibulum rhoncus. Ac turpis egestas integer eget. Auctor eu augue ut lectus arcu. Id consectetur purus ut faucibus. Justo laoreet sit amet cursus sit amet dictum sit. Ac odio tempor orci dapibus ultrices. Tempor orci eu lobortis elementum nibh tellus. Urna duis convallis convallis tellus id interdum velit laoreet</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container project_present__container">
+        <div class="project_present__slider">
+          <div class="project_present__swiper swiper">
+            <ul class="project_present__list swiper-wrapper">
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_2.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_3.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_6.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_7.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_2.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_3.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_6.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_7.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_2.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_3.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_6.webp" alt="">
+                </div>
+              </li>
+              <li class="project_present__item swiper-slide">
+                <div class="project_present__image">
+                  <img src="img/project/project_1/project_present_7.webp" alt="">
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="projects projects__border" data-scroll-section>
       <div class="projects__block">
         <div class="container projects__swiper_container">
