--- a/project.html
+++ b/project.html
@@ -125,6 +125,7 @@
   <main class="main" data-scroll-container>
     <div class="main__border"></div>
     <section class="project_top" data-scroll-section id="top" style="background: #001254;">
+      <img class="project_top__back" src="img/project/project_1/project_shadow.webp" alt="">
       <div class="container project_top__container">
         <div class="project_top__block">
           <div class="project_top__info">
