--- a/index.html
+++ b/index.html
@@ -746,11 +746,24 @@
                 <a href="services.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Услуги</span></h3>
                 </a>
+                <ul class="header__subnav_list">
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Аналитика</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Дизайн</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Веб-разработка</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Поддержка и развитие</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Автоматизация</span></p></a></li>
+                  <li class="header__subnav_item"><a href="price.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Прайс-лист</span></p></a></li>
+                </ul>
               </li>
               <li class="header__nav_item">
-                <a href="team.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Команда</span></h3>
+                <a href="#" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">О компании</span></h3>
                 </a>
+                <ul class="header__subnav_list">
+                  <li class="header__subnav_item"><a href="team.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Команда</span></p></a></li>
+                  <li class="header__subnav_item"><a href="certificates.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Сертификаты</span></p></a></li>
+                  <li class="header__subnav_item"><a href="competencies.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Компетенции партнера 1С-Битрикс</span></p></a></li>
+                </ul>
               </li>
               <li class="header__nav_item">
                 <a href="projects.html" class="header__nav_link">
