--- a/index.html
+++ b/index.html
@@ -776,13 +776,13 @@
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="articles.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Статьи</span></h3>
+                <a href="contacts.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Контакты</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="contacts.html" class="header__nav_link">
-                  <h3 class="text text__big"><span class="text__rotate">Контакты</span></h3>
+                <a href="articles.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Медиа</span></h3>
                 </a>
               </li>
             </ul>
