--- a/article.html
+++ b/article.html
@@ -129,12 +129,13 @@
         <div class="project_top__block">
           <div class="project_top__info">
             <div class="project_top__info_block">
-              <h4 class="project_top__head">#Аналитика</h4>
+              <ul class="breadcrumbs__list">
+                <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link text">Главная</a></li>
+                <li class="breadcrumbs__item"><a href="articles.html" class="breadcrumbs__link text">Статьи</a></li>
+                <li class="breadcrumbs__item"><a href="article.html" class="breadcrumbs__link text">Название статьи</a></li>
+              </ul>
               <h2 class="project_top__desc">Как организовать A/B-тестирование на крупном проекте и где брать идеи для гипотез</h2>
-              <a href="articles.html" target="_blank" class="btn project_top__button">
-                <span class="button__text">К статьям</span>
-                <span class="button__hover"></span>
-              </a>
+              <h4 class="project_top__head">#Аналитика</h4>
             </div>
           </div>
         </div>
