--- a/contacts.html
+++ b/contacts.html
@@ -131,8 +131,8 @@
         <div class="contacts__block">
           <h1 class="contacts__head">КОНТАКТЫ</h1>
           <div class="contacts__info">
-            <a href="mailto://HELLO@ANYERA.RU" class="contacts__link"><h2>HELLO@ANYERA.RU</h2></a>
-            <a href="tel://+79270030100" class="contacts__link"><h3>+7 (927) 003-01-00</h3></a>
+            <a href="mailto://HELLO@ANYERA.RU" class="contacts__link"><h2 class="text text__big">HELLO@ANYERA.RU</h2></a>
+            <a href="tel://+79270030100" class="contacts__link"><h3 class="text text__big">+7 (927) 003-01-00</h3></a>
           </div>
         </div>
       </div>
