add animate 404 and article

--- a/404.html
+++ b/404.html
@@ -127,6 +127,7 @@
     <section class="top" data-scroll-section id="top"><div class="main__border"></div></section>
     <section class="error_page" data-scroll-section>
       <img src="img/main/404.webp" alt="">
+      <img src="img/main/404-dark.webp" alt="">
       <div class="container error_page__container">
         <div class="error_page__block">
           <div class="error_page__flex">
